# json-schema-codegen

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  LICENSE  Makefile  README.md  codegen.py  dump.py  fix.py  json_codegen.py  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  publish.yml  test.yml
config/: ast_to_js.webpack.config.js
generators/: __init__.py  core.py  flow.py  javascript.py  javascript_flow.py  js_utils.py  python.py
generators/ast/: javascript.py  python.py
json_codegen/: __init__.py  cli.py  core.py  js_utils.py  python_utils.py  types.py
json_codegen/astlib/: javascript.py  python.py
json_codegen/generators/: __init__.py  flow.py  javascript_flow.py  python2.py  python3.py  python3_old.py  python3object.py
json_codegen/generators/python3/: __init__.py  annotations.py  data_arg.py  imports.py  klass.py
json_codegen/generators/python3_marshmallow/: __init__.py  generator.py  object_generator.py  utils.py
json_codegen/generators/python3_marshmallow_old/: generator.py  object_generator.py
lib/: core.py  javascript.py  js_utils.py
scripts/: ast_to_js.js  build_js_ast.js
tests/: __init__.py  cli_test.py  generator_flow_test.py  generator_javascript_flow_test.py  generator_javascript_test.py  generator_python2_test.py  generator_python3_marshmallow_test.py  generator_python3_test.py  generator_python_test.py
tests/astlib/: javascript_test.py
tests/fixtures/: build_js_ast.js
tests/fixtures/flow/: additional_properties_with_ref.ast.json  additional_properties_with_ref.template.js  array_items_ref.ast.json  array_items_ref.template.js  array_items_ref_as_alias.ast.json  array_items_ref_as_alias.template.js  array_items_ref_as_scalar.ast.json  array_items_ref_as_scalar.template.js  array_property_default.ast.json  array_property_default.template.js  boolean_property.ast.json  boolean_property.template.js  boolean_property_default.ast.json  boolean_property_default.template.js  definition_of_primitive_alias.ast.json  definition_of_primitive_alias.template.js  definition_without_title.ast.json  definition_without_title.template.js  integer_property.ast.json  integer_property.template.js  integer_property_default.ast.json  integer_property_default.template.js  object_property.ast.json  object_property.template.js  object_property_default.ast.json  object_property_default.template.js  simple.ast.json  simple.template.js  string_property_default.ast.json  string_property_default.template.js  with_mixed_properties.ast.json  with_mixed_properties.template.js  with_nested_object.ast.json  with_nested_object.template.js  with_property.ast.json  with_property.template.js  with_required_property.ast.json  with_required_property.template.js
tests/fixtures/generators/: custom_generator.py
tests/fixtures/javascript/: array_items_ref.ast.json  array_items_ref.template.js  array_items_ref_as_alias.ast.json  array_items_ref_as_alias.template.js  array_items_ref_as_scalar.ast.json  array_items_ref_as_scalar.template.js  array_property_default.ast.json  array_property_default.template.js  boolean_property_default.ast.json  boolean_property_default.template.js  (+20 more)
tests/generators/: core_test.py
(+109 files in other folders)
