[tool.black]
line-length = 99
target-version = ["py37", "py38", "py39", "py310"]
exclude = '''
/(
    \.git|node_modules|\.venv
)/
'''

[tool.poetry]
name = "json_codegen"
description = "Generate code from JSON schema files."
keywords = ["python", "javascript", "json-schema", "codegen"]
version = "0.6.0"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "json_codegen" }]
include = ["bin/ast_to_js"]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
astor = ">=0.7.1"

[tool.poetry.dev-dependencies]
black = "^22.8"
flake8 = "^5.0.4"
pytest = "^7.0.1"

[tool.poetry.scripts]
json_codegen = "json_codegen.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.1.0"]
build-backend = "poetry.core.masonry.api"
