[tool.black]
line-length = 99
target-version = ["py37", "py38", "py39", "py310", "py311"]
exclude = '''
/(
    \.git|node_modules|\.venv
)/
'''

[tool.poetry]
name = "json_codegen"
description = "Generate code from JSON schema files."
keywords = ["python", "javascript", "json-schema", "codegen"]
version = "0.6.0"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "json_codegen" }]
include = ["bin/ast_to_js"]

[tool.poetry.dependencies]
python = "^3.7,<3.8"
astor = ">=0.7.1"

[tool.poetry.scripts]
json_codegen = "json_codegen.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-clarity = "^1.0.1"
bandit = "^1.7.4"
pytest-testmon = ">=1.4.5,<3.0.0"
pytest-timeout = "^2.1.0"
pytest-cov = "^4.0.0"
mypy = ">=0.991,<1.2"
marshmallow = ">=2,<4"
black = ">=22.12,<24.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "astor"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "marshmallow"
ignore_missing_imports = true

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.pytest.ini_options]
timeout = 10
